@@ -138,7 +138,7 @@ public abstract class AbstractListenableFutureTest extends TestCase {
     CountDownLatch successLatch = new CountDownLatch(1);
     CountDownLatch listenerLatch = new CountDownLatch(1);
 
-    ExecutorService exec = Executors.newCachedThreadPool();
+    ExecutorService exec = Executors.newVirtualThreadPerTaskExecutor();
 
     future.addListener(listenerLatch::countDown, exec);
 
@@ -171,7 +171,7 @@ public abstract class AbstractListenableFutureTest extends TestCase {
   public void testAllListenersCompleteSuccessfully()
       throws InterruptedException, ExecutionException {
 
-    ExecutorService exec = Executors.newCachedThreadPool();
+    ExecutorService exec = Executors.newVirtualThreadPerTaskExecutor();
 
     int listenerCount = 20;
     CountDownLatch listenerLatch = new CountDownLatch(listenerCount);
